--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,16 @@
 name = "iwlib"
 version = "0.1.0"
 edition = "2021"
-description = "Iron-Wolf common functionality"
+description = "Iron-Wolf common functionality, with WebAssembler support"
+license = "GPL-3.0"
+repository = "https://github.com/Ragnaroek/iwlib"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+serde = { version = "1.0.137", features = ["derive"] }
 wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
+console_error_panic_hook = "0.1.7"
+js-sys = "0.3.57"
+web-sys = {version = "0.3.57", features = ["console"] }
