--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "iwlib"
+name = "libiw"
 version = "0.1.0"
 edition = "2021"
 description = "Iron-Wolf common functionality, with WebAssembler support"
@@ -11,7 +11,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 serde = { version = "1.0.137", features = ["derive"] }
-wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
+wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
 console_error_panic_hook = "0.1.7"
 js-sys = "0.3.57"
 web-sys = {version = "0.3.57", features = ["console"] }
